ENTRYSTORE-835: Address review feedback (round 2)
Bound the facet work on /search, which is reachable by guests. The
companion facet ran with facet.limit=-1 on every literal facet request,
and facetLang lifted the client field to -1 as well, so both sidestepped
entrystore.solr.facet-max-limit; sendQuery then re-sent that query on
each result-fill pass.

The lang arrays are gone, as the reporter no longer wants them: server-
side facetLang alone meets the ticket's goal. Buckets carry a name and a
count again, FacetValueDto loses its langs component, and a request
without facetLang now sends Solr exactly the query it sent before this
branch: no companion field and no per-field overrides.

With facetLang the selection happens inside Solr. The companion carries
a full-string facet.matches over the label part, the separator and the
requested range or a subtag of it, under an overrequest bounded by the
configured cap; the candidate labels are deduped and their exact counts
come from a second rows=0 POST, one facet.query per label through the
field parser, so a label containing commas or Solr syntax needs no
escaping. The buckets are then sorted by count and name and cut to the
client's limit. When the companion yields nothing while the plain facet
has buckets - an index predating the companion field - the unfiltered
facet is returned with a WARN naming the reindex.

sendQuery switches faceting off after the first pass, since facets
depend on the query rather than the page.

The version-marker gate is reverted to the drained check. Blocking the
markers on a rejected document meant one permanently rejected document
wiped the index and reindexed on every restart, for good; 0889cac6 had
removed that gate deliberately. The counter, the status field and the
ERROR stay, with a message that no longer blames only the schema.

SolrSchemaCheck now refuses to start when Solr answers 401 or 403: Solr
is reachable there and only the schema read is denied, which is exactly
the case the 